// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note component renders a .Note by default 1`] = `
<div
  className="Notes"
>
  <h2
    className="Notes__title"
  >
    <Link
      to="/notes/undefined"
    />
  </h2>
  <button
    className="Notes__delete"
    onClick={[Function]}
    type="button"
  >
     
    remove
  </button>
  <div
    className="Notes__dates"
  >
    <div
      className="Notes__dates-modified"
    >
      Modified
       
      <span
        className="Date"
      />
    </div>
  </div>
</div>
`;

exports[`Note component renders the Note given props 1`] = `
<div
  className="Notes"
>
  <h2
    className="Notes__title"
  >
    <Link
      to="/notes/a"
    >
      test-class-name
    </Link>
  </h2>
  <button
    className="Notes__delete"
    onClick={[Function]}
    type="button"
  >
     
    remove
  </button>
  <div
    className="Notes__dates"
  >
    <div
      className="Notes__dates-modified"
    >
      Modified
       
      <span
        className="Date"
      >
        <Component />
      </span>
    </div>
  </div>
</div>
`;
